# smol-course

./: .gitignore  README.md  pull_request_template  pull_request_template.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
1_instruction_tuning/: README.md  chat_templates.md  supervised_fine_tuning.md
1_instruction_tuning/notebooks/: chat_templates_example.ipynb  chat_templates_example_colab.ipynb  sft_finetuning_example.ipynb
1_instruction_tuning/tiny-code/: README.md  chat_templates.ipynb
2_preference_alignment/: README.md  dpo.md  orpo.md
2_preference_alignment/notebooks/: dpo_finetuning_example.ipynb  orpo_finetuning_example.ipynb
3_parameter_efficient_finetuning/: README.md  lora_adapters.md  prompt_tuning.md
3_parameter_efficient_finetuning/notebooks/: finetune_sft_peft.ipynb  load_lora_adapter_example.ipynb
4_evaluation/: README.md  automatic_benchmarks.md
4_evaluation/notebooks/: comparing_task_formulations.ipynb  lighteval_evaluate_and_analyse_your_LLM.ipynb
4_evaluation/project/: README.md  evaluation_task.py  generate_dataset.py
5_vision_language_models/: README.md  vlm_finetuning.md  vlm_usage.md
5_vision_language_models/notebooks/: vlm_finetune_sample.ipynb  vlm_sft_sample.ipynb  (+1 more)
6_synthetic_datasets/: README.md  instruction_datasets.md  preference_datasets.md
7_inference/: README.md  inference_pipeline.md  text_generation_inference.md
8_agents/: README.md  code_agents.md  custom_functions.md  retrieval_agents.md
es/: README.md
ja/: README.md
ko/: README.md
pt-br/: README.md
vi/: README.md
(+131 files in other folders)
